src/main/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    XOR
    STRING
    AND
    OR

Grammar

Rule 0     S' -> program
Rule 1     program -> objects_definitions scene
Rule 2     objects_definitions -> objects_definitions object_definition
Rule 3     objects_definitions -> <empty>
Rule 4     object_definition -> DEF ID { object_body }
Rule 5     object_body -> default_color_definition ; declarations new_body_rest
Rule 6     default_color_definition -> DEFAULT_COLOR ( expression , expression , expression )
Rule 7     new_body_rest -> blocks object_body_rest
Rule 8     new_body_rest -> blocks
Rule 9     block -> assigment ;
Rule 10    block -> if_expr
Rule 11    block -> while_expr
Rule 12    block -> color_node ;
Rule 13    blocks -> blocks block
Rule 14    blocks -> <empty>
Rule 15    object_body_rest -> shape_with_transformations blocks object_body_rest
Rule 16    object_body_rest -> shape_with_transformations blocks
Rule 17    object_body_rest -> shape_without_transformations blocks object_body_rest
Rule 18    object_body_rest -> shape_without_transformations blocks
Rule 19    shape_with_transformations -> shape ; transformation_nodes
Rule 20    shape_without_transformations -> shape ;
Rule 21    transformation_nodes -> transformation_node ; transformation_nodes
Rule 22    transformation_nodes -> transformation_node ;
Rule 23    transformation_node -> rotate_node
Rule 24    transformation_node -> translation_node
Rule 25    transformation_node -> scale_node
Rule 26    transformation_node -> color_node
Rule 27    rotate_node -> ROTATE ( expression )
Rule 28    translation_node -> TRANSLATE ( expression , expression )
Rule 29    color_node -> COLOR ( expression , expression , expression )
Rule 30    scale_node -> SCALE ( expression )
Rule 31    scale_node -> SCALE ( expression , expression )
Rule 32    shape -> primitive
Rule 33    shape -> usage
Rule 34    primitive -> rectangle
Rule 35    primitive -> circle
Rule 36    primitive -> oval
Rule 37    rectangle -> RECTANGLE ( expression , expression , expression , expression )
Rule 38    rectangle -> RECTANGLE ( expression , expression , expression , expression , expression )
Rule 39    circle -> CIRCLE ( expression , expression , expression )
Rule 40    oval -> OVAL ( expression , expression , expression , expression )
Rule 41    oval -> OVAL ( expression , expression , expression , expression , expression )
Rule 42    usage -> ID
Rule 43    scene -> SCENE ( INTEGER , INTEGER ) { declarations new_body_rest }
Rule 44    declarations -> declaration ; declarations
Rule 45    declarations -> <empty>
Rule 46    type -> int_type
Rule 47    type -> float_type
Rule 48    int_type -> INT_TYPE
Rule 49    float_type -> FLOAT_TYPE
Rule 50    declaration -> type declarators
Rule 51    declarators -> declarator , declarators
Rule 52    declarators -> declarator
Rule 53    declarator -> declarator_of_id
Rule 54    declarator -> assigment
Rule 55    declarator_of_id -> ID
Rule 56    assigment -> ID = expression
Rule 57    expression -> const_expr
Rule 58    expression -> id_expr
Rule 59    expression -> two_arg_expr
Rule 60    expression -> expr_in_brackets
Rule 61    const_expr -> int_const_expr
Rule 62    const_expr -> float_const_expr
Rule 63    float_const_expr -> FLOAT
Rule 64    int_const_expr -> INTEGER
Rule 65    id_expr -> ID
Rule 66    two_arg_expr -> expression + expression
Rule 67    two_arg_expr -> expression - expression
Rule 68    two_arg_expr -> expression * expression
Rule 69    two_arg_expr -> expression / expression
Rule 70    two_arg_expr -> expression L expression
Rule 71    two_arg_expr -> expression LE expression
Rule 72    two_arg_expr -> expression G expression
Rule 73    two_arg_expr -> expression GE expression
Rule 74    two_arg_expr -> expression EQ expression
Rule 75    two_arg_expr -> expression NE expression
Rule 76    expr_in_brackets -> ( expression )
Rule 77    if_expr -> IF ( expression ) { new_body_rest }
Rule 78    if_expr -> IF ( expression ) { new_body_rest } ELSE { new_body_rest }
Rule 79    while_expr -> WHILE ( expression ) { new_body_rest }

Terminals, with rules where they appear

(                    : 6 27 28 29 30 31 37 38 39 40 41 43 76 77 78 79
)                    : 6 27 28 29 30 31 37 38 39 40 41 43 76 77 78 79
*                    : 68
+                    : 66
,                    : 6 6 28 29 29 31 37 37 37 38 38 38 38 39 39 40 40 40 41 41 41 41 43 51
-                    : 67
/                    : 69
;                    : 5 9 12 19 20 21 22 44
=                    : 56
AND                  : 
CIRCLE               : 39
COLOR                : 29
DEF                  : 4
DEFAULT_COLOR        : 6
ELSE                 : 78
EQ                   : 74
FLOAT                : 63
FLOAT_TYPE           : 49
G                    : 72
GE                   : 73
ID                   : 4 42 55 56 65
IF                   : 77 78
INTEGER              : 43 43 64
INT_TYPE             : 48
L                    : 70
LE                   : 71
NE                   : 75
OR                   : 
OVAL                 : 40 41
RECTANGLE            : 37 38
ROTATE               : 27
SCALE                : 30 31
SCENE                : 43
STRING               : 
TRANSLATE            : 28
WHILE                : 79
XOR                  : 
error                : 
{                    : 4 43 77 78 78 79
}                    : 4 43 77 78 78 79

Nonterminals, with rules where they appear

assigment            : 9 54
block                : 13
blocks               : 7 8 13 15 16 17 18
circle               : 35
color_node           : 12 26
const_expr           : 57
declaration          : 44
declarations         : 5 43 44
declarator           : 51 52
declarator_of_id     : 53
declarators          : 50 51
default_color_definition : 5
expr_in_brackets     : 60
expression           : 6 6 6 27 28 28 29 29 29 30 31 31 37 37 37 37 38 38 38 38 38 39 39 39 40 40 40 40 41 41 41 41 41 56 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 77 78 79
float_const_expr     : 62
float_type           : 47
id_expr              : 58
if_expr              : 10
int_const_expr       : 61
int_type             : 46
new_body_rest        : 5 43 77 78 78 79
object_body          : 4
object_body_rest     : 7 15 17
object_definition    : 2
objects_definitions  : 1 2
oval                 : 36
primitive            : 32
program              : 0
rectangle            : 34
rotate_node          : 23
scale_node           : 25
scene                : 1
shape                : 19 20
shape_with_transformations : 15 16
shape_without_transformations : 17 18
transformation_node  : 21 22
transformation_nodes : 19 21
translation_node     : 24
two_arg_expr         : 59
type                 : 50
usage                : 33
while_expr           : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . objects_definitions scene
    (2) objects_definitions -> . objects_definitions object_definition
    (3) objects_definitions -> .

    SCENE           reduce using rule 3 (objects_definitions -> .)
    DEF             reduce using rule 3 (objects_definitions -> .)

    program                        shift and go to state 1
    objects_definitions            shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> objects_definitions . scene
    (2) objects_definitions -> objects_definitions . object_definition
    (43) scene -> . SCENE ( INTEGER , INTEGER ) { declarations new_body_rest }
    (4) object_definition -> . DEF ID { object_body }

    SCENE           shift and go to state 4
    DEF             shift and go to state 6

    scene                          shift and go to state 3
    object_definition              shift and go to state 5

state 3

    (1) program -> objects_definitions scene .

    $end            reduce using rule 1 (program -> objects_definitions scene .)


state 4

    (43) scene -> SCENE . ( INTEGER , INTEGER ) { declarations new_body_rest }

    (               shift and go to state 7


state 5

    (2) objects_definitions -> objects_definitions object_definition .

    SCENE           reduce using rule 2 (objects_definitions -> objects_definitions object_definition .)
    DEF             reduce using rule 2 (objects_definitions -> objects_definitions object_definition .)


state 6

    (4) object_definition -> DEF . ID { object_body }

    ID              shift and go to state 8


state 7

    (43) scene -> SCENE ( . INTEGER , INTEGER ) { declarations new_body_rest }

    INTEGER         shift and go to state 9


state 8

    (4) object_definition -> DEF ID . { object_body }

    {               shift and go to state 10


state 9

    (43) scene -> SCENE ( INTEGER . , INTEGER ) { declarations new_body_rest }

    ,               shift and go to state 11


state 10

    (4) object_definition -> DEF ID { . object_body }
    (5) object_body -> . default_color_definition ; declarations new_body_rest
    (6) default_color_definition -> . DEFAULT_COLOR ( expression , expression , expression )

    DEFAULT_COLOR   shift and go to state 13

    default_color_definition       shift and go to state 12
    object_body                    shift and go to state 14

state 11

    (43) scene -> SCENE ( INTEGER , . INTEGER ) { declarations new_body_rest }

    INTEGER         shift and go to state 15


state 12

    (5) object_body -> default_color_definition . ; declarations new_body_rest

    ;               shift and go to state 16


state 13

    (6) default_color_definition -> DEFAULT_COLOR . ( expression , expression , expression )

    (               shift and go to state 17


state 14

    (4) object_definition -> DEF ID { object_body . }

    }               shift and go to state 18


state 15

    (43) scene -> SCENE ( INTEGER , INTEGER . ) { declarations new_body_rest }

    )               shift and go to state 19


state 16

    (5) object_body -> default_color_definition ; . declarations new_body_rest
    (44) declarations -> . declaration ; declarations
    (45) declarations -> .
    (50) declaration -> . type declarators
    (46) type -> . int_type
    (47) type -> . float_type
    (48) int_type -> . INT_TYPE
    (49) float_type -> . FLOAT_TYPE

    ID              reduce using rule 45 (declarations -> .)
    IF              reduce using rule 45 (declarations -> .)
    WHILE           reduce using rule 45 (declarations -> .)
    COLOR           reduce using rule 45 (declarations -> .)
    RECTANGLE       reduce using rule 45 (declarations -> .)
    CIRCLE          reduce using rule 45 (declarations -> .)
    OVAL            reduce using rule 45 (declarations -> .)
    }               reduce using rule 45 (declarations -> .)
    INT_TYPE        shift and go to state 21
    FLOAT_TYPE      shift and go to state 20

    float_type                     shift and go to state 22
    declarations                   shift and go to state 23
    int_type                       shift and go to state 24
    declaration                    shift and go to state 25
    type                           shift and go to state 26

state 17

    (6) default_color_definition -> DEFAULT_COLOR ( . expression , expression , expression )
    (57) expression -> . const_expr
    (58) expression -> . id_expr
    (59) expression -> . two_arg_expr
    (60) expression -> . expr_in_brackets
    (61) const_expr -> . int_const_expr
    (62) const_expr -> . float_const_expr
    (65) id_expr -> . ID
    (66) two_arg_expr -> . expression + expression
    (67) two_arg_expr -> . expression - expression
    (68) two_arg_expr -> . expression * expression
    (69) two_arg_expr -> . expression / expression
    (70) two_arg_expr -> . expression L expression
    (71) two_arg_expr -> . expression LE expression
    (72) two_arg_expr -> . expression G expression
    (73) two_arg_expr -> . expression GE expression
    (74) two_arg_expr -> . expression EQ expression
    (75) two_arg_expr -> . expression NE expression
    (76) expr_in_brackets -> . ( expression )
    (64) int_const_expr -> . INTEGER
    (63) float_const_expr -> . FLOAT

    ID              shift and go to state 33
    (               shift and go to state 28
    INTEGER         shift and go to state 30
    FLOAT           shift and go to state 36

    int_const_expr                 shift and go to state 31
    float_const_expr               shift and go to state 32
    expr_in_brackets               shift and go to state 34
    expression                     shift and go to state 35
    const_expr                     shift and go to state 27
    two_arg_expr                   shift and go to state 29
    id_expr                        shift and go to state 37

state 18

    (4) object_definition -> DEF ID { object_body } .

    SCENE           reduce using rule 4 (object_definition -> DEF ID { object_body } .)
    DEF             reduce using rule 4 (object_definition -> DEF ID { object_body } .)


state 19

    (43) scene -> SCENE ( INTEGER , INTEGER ) . { declarations new_body_rest }

    {               shift and go to state 38


state 20

    (49) float_type -> FLOAT_TYPE .

    ID              reduce using rule 49 (float_type -> FLOAT_TYPE .)


state 21

    (48) int_type -> INT_TYPE .

    ID              reduce using rule 48 (int_type -> INT_TYPE .)


state 22

    (47) type -> float_type .

    ID              reduce using rule 47 (type -> float_type .)


state 23

    (5) object_body -> default_color_definition ; declarations . new_body_rest
    (7) new_body_rest -> . blocks object_body_rest
    (8) new_body_rest -> . blocks
    (13) blocks -> . blocks block
    (14) blocks -> .

    ID              reduce using rule 14 (blocks -> .)
    IF              reduce using rule 14 (blocks -> .)
    WHILE           reduce using rule 14 (blocks -> .)
    COLOR           reduce using rule 14 (blocks -> .)
    RECTANGLE       reduce using rule 14 (blocks -> .)
    CIRCLE          reduce using rule 14 (blocks -> .)
    OVAL            reduce using rule 14 (blocks -> .)
    }               reduce using rule 14 (blocks -> .)

    blocks                         shift and go to state 39
    new_body_rest                  shift and go to state 40

state 24

    (46) type -> int_type .

    ID              reduce using rule 46 (type -> int_type .)


state 25

    (44) declarations -> declaration . ; declarations

    ;               shift and go to state 41


state 26

    (50) declaration -> type . declarators
    (51) declarators -> . declarator , declarators
    (52) declarators -> . declarator
    (53) declarator -> . declarator_of_id
    (54) declarator -> . assigment
    (55) declarator_of_id -> . ID
    (56) assigment -> . ID = expression

    ID              shift and go to state 46

    assigment                      shift and go to state 42
    declarators                    shift and go to state 43
    declarator_of_id               shift and go to state 44
    declarator                     shift and go to state 45

state 27

    (57) expression -> const_expr .

    ,               reduce using rule 57 (expression -> const_expr .)
    +               reduce using rule 57 (expression -> const_expr .)
    -               reduce using rule 57 (expression -> const_expr .)
    *               reduce using rule 57 (expression -> const_expr .)
    /               reduce using rule 57 (expression -> const_expr .)
    L               reduce using rule 57 (expression -> const_expr .)
    LE              reduce using rule 57 (expression -> const_expr .)
    G               reduce using rule 57 (expression -> const_expr .)
    GE              reduce using rule 57 (expression -> const_expr .)
    EQ              reduce using rule 57 (expression -> const_expr .)
    NE              reduce using rule 57 (expression -> const_expr .)
    )               reduce using rule 57 (expression -> const_expr .)
    ;               reduce using rule 57 (expression -> const_expr .)


state 28

    (76) expr_in_brackets -> ( . expression )
    (57) expression -> . const_expr
    (58) expression -> . id_expr
    (59) expression -> . two_arg_expr
    (60) expression -> . expr_in_brackets
    (61) const_expr -> . int_const_expr
    (62) const_expr -> . float_const_expr
    (65) id_expr -> . ID
    (66) two_arg_expr -> . expression + expression
    (67) two_arg_expr -> . expression - expression
    (68) two_arg_expr -> . expression * expression
    (69) two_arg_expr -> . expression / expression
    (70) two_arg_expr -> . expression L expression
    (71) two_arg_expr -> . expression LE expression
    (72) two_arg_expr -> . expression G expression
    (73) two_arg_expr -> . expression GE expression
    (74) two_arg_expr -> . expression EQ expression
    (75) two_arg_expr -> . expression NE expression
    (76) expr_in_brackets -> . ( expression )
    (64) int_const_expr -> . INTEGER
    (63) float_const_expr -> . FLOAT

    ID              shift and go to state 33
    (               shift and go to state 28
    INTEGER         shift and go to state 30
    FLOAT           shift and go to state 36

    int_const_expr                 shift and go to state 31
    float_const_expr               shift and go to state 32
    expr_in_brackets               shift and go to state 34
    expression                     shift and go to state 47
    const_expr                     shift and go to state 27
    two_arg_expr                   shift and go to state 29
    id_expr                        shift and go to state 37

state 29

    (59) expression -> two_arg_expr .

    ,               reduce using rule 59 (expression -> two_arg_expr .)
    +               reduce using rule 59 (expression -> two_arg_expr .)
    -               reduce using rule 59 (expression -> two_arg_expr .)
    *               reduce using rule 59 (expression -> two_arg_expr .)
    /               reduce using rule 59 (expression -> two_arg_expr .)
    L               reduce using rule 59 (expression -> two_arg_expr .)
    LE              reduce using rule 59 (expression -> two_arg_expr .)
    G               reduce using rule 59 (expression -> two_arg_expr .)
    GE              reduce using rule 59 (expression -> two_arg_expr .)
    EQ              reduce using rule 59 (expression -> two_arg_expr .)
    NE              reduce using rule 59 (expression -> two_arg_expr .)
    )               reduce using rule 59 (expression -> two_arg_expr .)
    ;               reduce using rule 59 (expression -> two_arg_expr .)


state 30

    (64) int_const_expr -> INTEGER .

    +               reduce using rule 64 (int_const_expr -> INTEGER .)
    -               reduce using rule 64 (int_const_expr -> INTEGER .)
    *               reduce using rule 64 (int_const_expr -> INTEGER .)
    /               reduce using rule 64 (int_const_expr -> INTEGER .)
    L               reduce using rule 64 (int_const_expr -> INTEGER .)
    LE              reduce using rule 64 (int_const_expr -> INTEGER .)
    G               reduce using rule 64 (int_const_expr -> INTEGER .)
    GE              reduce using rule 64 (int_const_expr -> INTEGER .)
    EQ              reduce using rule 64 (int_const_expr -> INTEGER .)
    NE              reduce using rule 64 (int_const_expr -> INTEGER .)
    ,               reduce using rule 64 (int_const_expr -> INTEGER .)
    )               reduce using rule 64 (int_const_expr -> INTEGER .)
    ;               reduce using rule 64 (int_const_expr -> INTEGER .)


state 31

    (61) const_expr -> int_const_expr .

    )               reduce using rule 61 (const_expr -> int_const_expr .)
    +               reduce using rule 61 (const_expr -> int_const_expr .)
    -               reduce using rule 61 (const_expr -> int_const_expr .)
    *               reduce using rule 61 (const_expr -> int_const_expr .)
    /               reduce using rule 61 (const_expr -> int_const_expr .)
    L               reduce using rule 61 (const_expr -> int_const_expr .)
    LE              reduce using rule 61 (const_expr -> int_const_expr .)
    G               reduce using rule 61 (const_expr -> int_const_expr .)
    GE              reduce using rule 61 (const_expr -> int_const_expr .)
    EQ              reduce using rule 61 (const_expr -> int_const_expr .)
    NE              reduce using rule 61 (const_expr -> int_const_expr .)
    ,               reduce using rule 61 (const_expr -> int_const_expr .)
    ;               reduce using rule 61 (const_expr -> int_const_expr .)


state 32

    (62) const_expr -> float_const_expr .

    )               reduce using rule 62 (const_expr -> float_const_expr .)
    +               reduce using rule 62 (const_expr -> float_const_expr .)
    -               reduce using rule 62 (const_expr -> float_const_expr .)
    *               reduce using rule 62 (const_expr -> float_const_expr .)
    /               reduce using rule 62 (const_expr -> float_const_expr .)
    L               reduce using rule 62 (const_expr -> float_const_expr .)
    LE              reduce using rule 62 (const_expr -> float_const_expr .)
    G               reduce using rule 62 (const_expr -> float_const_expr .)
    GE              reduce using rule 62 (const_expr -> float_const_expr .)
    EQ              reduce using rule 62 (const_expr -> float_const_expr .)
    NE              reduce using rule 62 (const_expr -> float_const_expr .)
    ,               reduce using rule 62 (const_expr -> float_const_expr .)
    ;               reduce using rule 62 (const_expr -> float_const_expr .)


state 33

    (65) id_expr -> ID .

    +               reduce using rule 65 (id_expr -> ID .)
    -               reduce using rule 65 (id_expr -> ID .)
    *               reduce using rule 65 (id_expr -> ID .)
    /               reduce using rule 65 (id_expr -> ID .)
    L               reduce using rule 65 (id_expr -> ID .)
    LE              reduce using rule 65 (id_expr -> ID .)
    G               reduce using rule 65 (id_expr -> ID .)
    GE              reduce using rule 65 (id_expr -> ID .)
    EQ              reduce using rule 65 (id_expr -> ID .)
    NE              reduce using rule 65 (id_expr -> ID .)
    ,               reduce using rule 65 (id_expr -> ID .)
    ;               reduce using rule 65 (id_expr -> ID .)
    )               reduce using rule 65 (id_expr -> ID .)


state 34

    (60) expression -> expr_in_brackets .

    ,               reduce using rule 60 (expression -> expr_in_brackets .)
    +               reduce using rule 60 (expression -> expr_in_brackets .)
    -               reduce using rule 60 (expression -> expr_in_brackets .)
    *               reduce using rule 60 (expression -> expr_in_brackets .)
    /               reduce using rule 60 (expression -> expr_in_brackets .)
    L               reduce using rule 60 (expression -> expr_in_brackets .)
    LE              reduce using rule 60 (expression -> expr_in_brackets .)
    G               reduce using rule 60 (expression -> expr_in_brackets .)
    GE              reduce using rule 60 (expression -> expr_in_brackets .)
    EQ              reduce using rule 60 (expression -> expr_in_brackets .)
    NE              reduce using rule 60 (expression -> expr_in_brackets .)
    )               reduce using rule 60 (expression -> expr_in_brackets .)
    ;               reduce using rule 60 (expression -> expr_in_brackets .)


state 35

    (6) default_color_definition -> DEFAULT_COLOR ( expression . , expression , expression )
    (66) two_arg_expr -> expression . + expression
    (67) two_arg_expr -> expression . - expression
    (68) two_arg_expr -> expression . * expression
    (69) two_arg_expr -> expression . / expression
    (70) two_arg_expr -> expression . L expression
    (71) two_arg_expr -> expression . LE expression
    (72) two_arg_expr -> expression . G expression
    (73) two_arg_expr -> expression . GE expression
    (74) two_arg_expr -> expression . EQ expression
    (75) two_arg_expr -> expression . NE expression

    ,               shift and go to state 55
    +               shift and go to state 52
    -               shift and go to state 54
    *               shift and go to state 53
    /               shift and go to state 58
    L               shift and go to state 56
    LE              shift and go to state 48
    G               shift and go to state 51
    GE              shift and go to state 57
    EQ              shift and go to state 49
    NE              shift and go to state 50


state 36

    (63) float_const_expr -> FLOAT .

    ,               reduce using rule 63 (float_const_expr -> FLOAT .)
    +               reduce using rule 63 (float_const_expr -> FLOAT .)
    -               reduce using rule 63 (float_const_expr -> FLOAT .)
    *               reduce using rule 63 (float_const_expr -> FLOAT .)
    /               reduce using rule 63 (float_const_expr -> FLOAT .)
    L               reduce using rule 63 (float_const_expr -> FLOAT .)
    LE              reduce using rule 63 (float_const_expr -> FLOAT .)
    G               reduce using rule 63 (float_const_expr -> FLOAT .)
    GE              reduce using rule 63 (float_const_expr -> FLOAT .)
    EQ              reduce using rule 63 (float_const_expr -> FLOAT .)
    NE              reduce using rule 63 (float_const_expr -> FLOAT .)
    )               reduce using rule 63 (float_const_expr -> FLOAT .)
    ;               reduce using rule 63 (float_const_expr -> FLOAT .)


state 37

    (58) expression -> id_expr .

    ,               reduce using rule 58 (expression -> id_expr .)
    +               reduce using rule 58 (expression -> id_expr .)
    -               reduce using rule 58 (expression -> id_expr .)
    *               reduce using rule 58 (expression -> id_expr .)
    /               reduce using rule 58 (expression -> id_expr .)
    L               reduce using rule 58 (expression -> id_expr .)
    LE              reduce using rule 58 (expression -> id_expr .)
    G               reduce using rule 58 (expression -> id_expr .)
    GE              reduce using rule 58 (expression -> id_expr .)
    EQ              reduce using rule 58 (expression -> id_expr .)
    NE              reduce using rule 58 (expression -> id_expr .)
    )               reduce using rule 58 (expression -> id_expr .)
    ;               reduce using rule 58 (expression -> id_expr .)


state 38

    (43) scene -> SCENE ( INTEGER , INTEGER ) { . declarations new_body_rest }
    (44) declarations -> . declaration ; declarations
    (45) declarations -> .
    (50) declaration -> . type declarators
    (46) type -> . int_type
    (47) type -> . float_type
    (48) int_type -> . INT_TYPE
    (49) float_type -> . FLOAT_TYPE

    }               reduce using rule 45 (declarations -> .)
    ID              reduce using rule 45 (declarations -> .)
    IF              reduce using rule 45 (declarations -> .)
    WHILE           reduce using rule 45 (declarations -> .)
    COLOR           reduce using rule 45 (declarations -> .)
    RECTANGLE       reduce using rule 45 (declarations -> .)
    CIRCLE          reduce using rule 45 (declarations -> .)
    OVAL            reduce using rule 45 (declarations -> .)
    INT_TYPE        shift and go to state 21
    FLOAT_TYPE      shift and go to state 20

    float_type                     shift and go to state 22
    declarations                   shift and go to state 59
    int_type                       shift and go to state 24
    declaration                    shift and go to state 25
    type                           shift and go to state 26

state 39
